add admin user check and validate
